<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flyscan_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="trung.do853@hcmut.edu.vn">ttd</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>opencv2</build_depend>

 <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <!-- SLAM dependencies -->
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>

  <!-- Perception dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Vision/ML dependencies -->
  <depend>vision_msgs</depend>
  <depend>object_recognition_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
